--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: huicheang.github.io
 
 # User settings
 username: huicheang
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
-user_title: Software Developer
+# user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
+user_title: A happy girl who loves tech and travel.
 email: huicheang2403@gmail.com
 # twitter_username: lorem_ipsum
 github_username:  huicheang
